--- a/wp-content/themes/trek-travel-theme/package.json
+++ b/wp-content/themes/trek-travel-theme/package.json
@@ -18,21 +18,21 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@popperjs/core": "^2.11.5",
-    "autoprefixer": "^10.4.7",
-    "bootstrap": "^5.2.0",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss-loader": "^7.0.1",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "@popperjs/core": "2.11.5",
+    "autoprefixer": "10.4.7",
+    "bootstrap": "5.2.0",
+    "css-loader": "6.7.1",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "postcss-loader": "7.3.3",
+    "sass": "1.54.0",
+    "sass-loader": "13.3.2",
+    "style-loader": "3.3.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "4.10.0"
   },
   "dependencies": {
-    "algoliasearch": "^4.14.2",
-    "instantsearch.js": "^4.44.0"
+    "algoliasearch": "4.14.2",
+    "instantsearch.js": "4.44.0"
   }
 }
